--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@fortawesome/free-solid-svg-icons": "latest",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
